<resources>
    <string name="app_name">Faces&amp;Maps</string>
    <string name="bottom_nav_faces">Faces</string>
    <string name="bottom_nav_maps">Maps</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="emailLabel">Email:</string>
</resources>
